Mejorando el estiloPagPrincipal.css y editando index.html.
Acabe de dar un estilo mejor a estiloPagPrincipal.css para que este
tenga cuadros separados con colores y dentro de estas esten los link
que llevan a las paginas de las recetas, y edite index.html colocando
"div" a cada "li" para que esta esten separadas y dentro de los "div"
le coloque clases para tenerlas por separado a cada una.

--- a/CSS/estiloPagPrincipal.css
+++ b/CSS/estiloPagPrincipal.css
@@ -2,6 +2,22 @@ body{
     background-color: rgb(167, 228, 216);
 }
 .titulo{
-    color: rgb(2, 2, 2);
+    color:black;
     text-align: center;
+}
+.listado{
+    text-align: center;
+    padding-left: 0;
+    list-style-position: inside;
+}
+.pollo,.carne,.puerco{
+    background-color: darkcyan;
+    border: 2px solid white;
+    width: 300px;
+    padding: 40px;
+    margin: 20px;
+    margin-left: 500px;
+}
+.colorpollo,.colorcarne,.colorpuerco{
+    color: black;
 }
