--- a/CSS/estiloPagTacoPollo.css
+++ b/CSS/estiloPagTacoPollo.css
@@ -13,7 +13,7 @@ body{
     margin-right: auto;
 }
 .titulo,.sub,.pasos,.ingredientes,.lista,
-.paso01,.parrafo{
+.pasos01,.parrafo{
     font-family: Arial, Helvetica, sans-serif;
 }
 
